--- a/package.json
+++ b/package.json
@@ -12,8 +12,5 @@
     "lerna": "^3.22.1",
     "prettier": "^2.2.1"
   },
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ]
+  "private": true
 }
