--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -15,6 +15,9 @@
     "type": "git",
     "url": "https://github.com/p-chan/prettier-config.git"
   },
+  "devDependencies": {
+    "prettier": "^2.2.1"
+  },
   "peerDependencies": {
     "prettier": "^2.0.0"
   }
